using media query to fix GSC error - mobile usability
Error - Clickable elements too close together (social link buttons)
fix - use media query so that there is a minimum margin of 50px between personal links in smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,3 +37,10 @@ body > div{
     margin-top: 2vmin;
     font-style: italic;
 }
+@media (max-width: 800px), (max-height: 800px){
+    #personal-links > a {
+        margin-left: 25px;
+        margin-right: 25px;
+        font-size: 25px;
+    }
+}
